# libalgebra

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  benchmark.cpp  benchmark_pospopcnt_u16.cpp  benchmark_pospopcnt_u8.cpp  libalgebra.h  validate_pospopcnt_u16.cpp  validate_pospopcnt_u8.cpp
